--- a/app/templates/ListGroups.html
+++ b/app/templates/ListGroups.html
@@ -1,21 +1,33 @@
 <div class="list-group-item">
-    <div class="media">
-        <div class="media-body">
-            <p>FCC Youth</p>
-        </div>
-    </div>
+	<div class="media">
+		<div class="media-body">
+			<p>FCC Youth</p>
+			<small>Created 7 days ago</small>
+		</div>
+		<div class="media-right">
+			<span class="badge pull-right">2</span>
+		</div>
+	</div>
 </div>
 <div class="list-group-item">
-    <div class="media">
-        <div class="media-body">
-            <p>WCC Men</p>
-        </div>
-    </div>
+	<div class="media">
+		<div class="media-body">
+			<p>WCC Men</p>
+			<small>Created 5 mins ago</small>
+		</div>
+		<div class="media-right">
+			<span class="badge pull-right">12</span>
+		</div>
+	</div>
 </div>
 <div class="list-group-item">
-    <div class="media">
-        <div class="media-body">
-            <p>FL Women</p>
-        </div>
-    </div>
+	<div class="media">
+		<div class="media-body">
+			<p>FL Women</p>
+			<small>Created 9 hours ago</small>
+		</div>
+		<div class="media-right">
+			<span class="badge pull-right">120</span>
+		</div>
+	</div>
 </div>
