--- a/app/templates/NavBar.html
+++ b/app/templates/NavBar.html
@@ -1,14 +1,3 @@
-<!--<nav class="navbar navbar-default" ng-controller="NavCtrl">
-  <div class="container">
-      <ul class="nav navbar-nav navbar-center">
-        <li><a ng-href="#"><i class="fa fa-lg fa-home" aria-hidden="true"></i></a></li>
-        <li><a href="#"><i class="fa fa-lg fa-comments-o" aria-hidden="true"></i><span ng-if="count" class="badge">{{count}}</span></a></li>
-        <li><a href="#"><i class="fa fa-lg fa-book" aria-hidden="true"></i></a></li>
-        <li><a ng-href="#"><i class="fa fa-lg fa-cog" aria-hidden="true"></i></a></li>
-      </ul>
-  </div>
-</nav>-->
-
 <nav class="navbar navbar-default navbar-fixed-top animate">
   <div class="container navbar-more">
     <ul class="nav navbar-nav mobile-bar">
@@ -19,13 +8,13 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="#/groups">
           <span class="menu-icon fa fa-comments-o"></span>
           Groups
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="#/journal">
           <span class="menu-icon fa fa-book"></span>
           Journal
         </a>
