Add Journal page

--- a/app/templates/ListRequests.html
+++ b/app/templates/ListRequests.html
@@ -1,42 +1,86 @@
-<div class="list-group-item">
-    <div class="media">
-        <div class="media-left">
-            <span class="fa-stack fa-lg">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-circle fa-stack-1x"></i>
-            </span>
-        </div>
-        <div class="media-body">
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
-            <small>Created 2 mins ago</small>
-        </div>
-    </div>
-</div>
-<div class="list-group-item">
-    <div class="media">
-        <div class="media-left">
-            <span class="fa-stack fa-lg">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-circle fa-stack-1x"></i>
-            </span>
-        </div>
-        <div class="media-body">
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
-            <small>Created 6 days ago</small>
-        </div>
-    </div>
-</div>
-<div class="list-group-item">
-    <div class="media">
-        <div class="media-left">
-            <span class="fa-stack fa-lg">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-check fa-stack-1x fa-inverse"></i>
-            </span>
-        </div>
-        <div class="media-body">
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
-            <small>Created 10 mins ago</small>
-        </div>
-    </div>
+<div class="list-group">
+  <a class="list-group-item">
+      <div class="media">
+          <div class="media-left">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-circle fa-stack-1x"></i>
+              </span>
+          </div>
+          <div class="media-body">
+              <img src="http://lorempixel.com/50/50/people" class="pull-right img-circle" alt="">
+              <p class="list-group-item-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
+          </div>
+      </div>
+  </a>
+  <a class="list-group-item disabled">
+      <div class="media">
+          <div class="media-left">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-check fa-stack-1x fa-inverse"></i>
+              </span>
+          </div>
+          <div class="media-body">
+              <img src="http://lorempixel.com/50/50/people" class="pull-right img-circle" alt="">
+              <p class="list-group-item-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
+          </div>
+      </div>
+  </a>
+  <a class="list-group-item">
+      <div class="media">
+          <div class="media-left">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-circle fa-stack-1x"></i>
+              </span>
+          </div>
+          <div class="media-body">
+              <img src="http://lorempixel.com/50/50/people" class="pull-right img-circle" alt="">
+              <p class="list-group-item-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
+          </div>
+      </div>
+  </a>
+  <a class="list-group-item disabled">
+      <div class="media">
+          <div class="media-left">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-check fa-stack-1x fa-inverse"></i>
+              </span>
+          </div>
+          <div class="media-body">
+              <img src="http://lorempixel.com/50/50/people" class="pull-right img-circle" alt="">
+              <p class="list-group-item-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
+          </div>
+      </div>
+  </a>
+  <a class="list-group-item">
+      <div class="media">
+          <div class="media-left">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-circle fa-stack-1x"></i>
+              </span>
+          </div>
+          <div class="media-body">
+              <img src="http://lorempixel.com/50/50/people" class="pull-right img-circle" alt="">
+              <p class="list-group-item-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
+          </div>
+      </div>
+  </a>
+  <a class="list-group-item">
+      <div class="media">
+          <div class="media-left">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-circle fa-stack-1x"></i>
+              </span>
+          </div>
+          <div class="media-body">
+              <img src="http://lorempixel.com/50/50/people" class="pull-right img-circle" alt="">
+              <p class="list-group-item-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
+          </div>
+      </div>
+  </a>
 </div>
