added share button (needs img)

--- a/app/templates/ListRequests.html
+++ b/app/templates/ListRequests.html
@@ -40,3 +40,65 @@
         </div>
     </div>
 </div>
+<div class="list-group-item">
+    <div class="media">
+        <div class="media-left">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-check fa-stack-1x fa-inverse"></i>
+            </span>
+        </div>
+        <div class="media-body">
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
+            <small>Created 10 mins ago</small>
+        </div>
+    </div>
+</div>
+<div class="list-group-item">
+    <div class="media">
+        <div class="media-left">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-check fa-stack-1x fa-inverse"></i>
+            </span>
+        </div>
+        <div class="media-body">
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
+            <small>Created 10 mins ago</small>
+        </div>
+    </div>
+</div>
+<div class="list-group-item">
+    <div class="media">
+        <div class="media-left">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-check fa-stack-1x fa-inverse"></i>
+            </span>
+        </div>
+        <div class="media-body">
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
+            <small>Created 10 mins ago</small>
+        </div>
+    </div>
+</div>
+<div class="list-group-item">
+    <div class="media">
+        <div class="media-left">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-check fa-stack-1x fa-inverse"></i>
+            </span>
+        </div>
+        <div class="media-body">
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
+            <small>Created 10 mins ago</small>
+        </div>
+    </div>
+    <nav class="container-float-btn"> 
+		<a href="#" class="buttons-float" tooltip="Private"></a>
+		<a href="#" class="buttons-float" tooltip="Group"></a>
+		<a href="#" class="buttons-float" tooltip="Public"></a>
+		<a class="buttons-float" tooltip="Share Requests"></a>
+	</nav>
+</div>
