--- a/app/templates/NavBar.html
+++ b/app/templates/NavBar.html
@@ -3,7 +3,7 @@
     <ul class="nav navbar-nav mobile-bar">
       <li>
         <a href="#">
-          <span class="menu-icon fa fa-home"></span>
+          <span class="menu-icon fa fa-user"></span>
           My List
         </a>
       </li>
