Refactor all pages

--- a/app/templates/Journal.html
+++ b/app/templates/Journal.html
@@ -3,30 +3,32 @@
   <a class="list-group-item">
       <div class="media">
           <div class="media-left">
-              <span class="fa-stack fa-lg">
+              <span class="fa-stack fa-2x">
                 <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-circle fa-stack-1x"></i>
+                <i class="fa fa-plus fa-stack-1x fa-inverse"></i>
               </span>
           </div>
           <div class="media-body">
-              <img src="http://lorempixel.com/50/50/people" class="pull-right img-circle" alt="">
-              <h4 class="list-group-item-heading">FCC Youth</h4>
-              <p class="list-group-item-text">Prayed for at 12:30pm today.</p>
+              <p class="list-group-item-text"><strong>You</strong> added <strong>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</strong><br><small>2:00pm.</small></p>
+          </div>
+          <div class="media-right">
+            <img src="http://i.pravatar.cc/60?u=user1" class="img-circle" alt="">
           </div>
       </div>
   </a>
-  <a class="list-group-item disabled">
+  <a class="list-group-item">
       <div class="media">
           <div class="media-left">
-              <span class="fa-stack fa-lg">
+              <span class="fa-stack fa-2x">
                 <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-check fa-stack-1x fa-inverse"></i>
+                <i class="fa fa-heart fa-stack-1x fa-inverse"></i>
               </span>
           </div>
           <div class="media-body">
-              <img src="http://lorempixel.com/50/50/people" class="pull-right img-circle" alt="">
-              <h4 class="list-group-item-heading">WCC Men</h4>
-              <p class="list-group-item-text">Prayed for at 10:15am today.</p>
+              <p class="list-group-item-text"><strong>You</strong> prayed for <strong>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</strong><br><small>12:15pm.</small></p>
+          </div>
+          <div class="media-right">
+            <img src="http://i.pravatar.cc/60?u=user2" class="img-circle" alt="">
           </div>
       </div>
   </a>
@@ -34,63 +36,51 @@
 
 <h3>Yesterday</h3>
 <div class="list-group">
-  <a class="list-group-item disabled">
+  <a class="list-group-item">
       <div class="media">
           <div class="media-left">
-              <span class="fa-stack fa-lg">
+              <span class="fa-stack fa-2x">
                 <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-check fa-stack-1x fa-inverse"></i>
+                <i class="fa fa-users fa-stack-1x fa-inverse"></i>
               </span>
           </div>
           <div class="media-body">
-              <img src="http://lorempixel.com/50/50/people" class="pull-right img-circle" alt="">
-              <h4 class="list-group-item-heading">FL Women</h4>
-              <p class="list-group-item-text">Prayed for at 12:30pm today.</p>
+              <p class="list-group-item-text"><strong>You</strong> joined the <strong>FL Men</strong> group<br><small>2:00pm.</small></p>
+          </div>
+          <div class="media-right">
+            <img src="http://lorempixel.com/60/60" class="img-rounded" alt="">
           </div>
       </div>
   </a>
   <a class="list-group-item">
       <div class="media">
           <div class="media-left">
-              <span class="fa-stack fa-lg">
+              <span class="fa-stack fa-2x">
                 <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-check fa-stack-1x fa-inverse"></i>
+                <i class="fa fa-plus fa-stack-1x fa-inverse"></i>
               </span>
           </div>
           <div class="media-body">
-              <img src="http://lorempixel.com/50/50/people" class="pull-right img-circle" alt="">
-              <h4 class="list-group-item-heading">WCC Men</h4>
-              <p class="list-group-item-text">Prayed for at 10:15am today.</p>
+              <p class="list-group-item-text"><strong>You</strong> added <strong>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</strong><br><small>2:00pm.</small></p>
           </div>
-      </div>
-  </a>
-  <a class="list-group-item disabled">
-      <div class="media">
-          <div class="media-left">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-check fa-stack-1x fa-inverse"></i>
-              </span>
-          </div>
-          <div class="media-body">
-              <img src="http://lorempixel.com/50/50/people" class="pull-right img-circle" alt="">
-              <h4 class="list-group-item-heading">FL Women</h4>
-              <p class="list-group-item-text">Prayed for at 12:30pm today.</p>
+          <div class="media-right">
+            <img src="http://i.pravatar.cc/60?u=user4" class="img-circle" alt="">
           </div>
       </div>
   </a>
   <a class="list-group-item">
       <div class="media">
           <div class="media-left">
-              <span class="fa-stack fa-lg">
+              <span class="fa-stack fa-2x">
                 <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-check fa-stack-1x fa-inverse"></i>
+                <i class="fa fa-heart fa-stack-1x fa-inverse"></i>
               </span>
           </div>
           <div class="media-body">
-              <img src="http://lorempixel.com/50/50/people" class="pull-right img-circle" alt="">
-              <h4 class="list-group-item-heading">WCC Men</h4>
-              <p class="list-group-item-text">Prayed for at 10:15am today.</p>
+              <p class="list-group-item-text"><strong>You</strong> prayed for <strong>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</strong><br><small>12:15pm.</small></p>
+          </div>
+          <div class="media-right">
+            <img src="http://i.pravatar.cc/60?u=user5" class="img-circle" alt="">
           </div>
       </div>
   </a>
