--- a/app/templates/ListGroups.html
+++ b/app/templates/ListGroups.html
@@ -1,33 +1,35 @@
-<div class="list-group-item">
-	<div class="media">
-		<div class="media-body">
-			<p>FCC Youth</p>
-			<small>Created 7 days ago</small>
-		</div>
-		<div class="media-right">
-			<span class="badge pull-right">2</span>
-		</div>
-	</div>
-</div>
-<div class="list-group-item">
-	<div class="media">
-		<div class="media-body">
-			<p>WCC Men</p>
-			<small>Created 5 mins ago</small>
-		</div>
-		<div class="media-right">
-			<span class="badge pull-right">12</span>
-		</div>
-	</div>
-</div>
-<div class="list-group-item">
-	<div class="media">
-		<div class="media-body">
-			<p>FL Women</p>
-			<small>Created 9 hours ago</small>
-		</div>
-		<div class="media-right">
-			<span class="badge pull-right">120</span>
-		</div>
-	</div>
+<div class="list-group">
+  <a class="list-group-item" href="#">
+      <div class="media">
+          <div class="media-left">
+              <img src="http://lorempixel.com/100/100/abstract?1" class="img-rounded" alt="">
+          </div>
+          <div class="media-body">
+              <h4 class="list-group-item-header">FL Men <span class="badge pull-right">12 requests</span></h4>
+              <p class="list-group-item-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</p>
+          </div>
+      </div>
+  </a>
+  <a class="list-group-item" href="#">
+      <div class="media">
+          <div class="media-left">
+              <img src="http://lorempixel.com/100/100/abstract?2" class="img-rounded" alt="">
+          </div>
+          <div class="media-body">
+              <h4 class="list-group-item-header">WCC Youth <span class="badge pull-right">21 requests</span></h4>
+              <p class="list-group-item-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</p>
+          </div>
+      </div>
+  </a>
+  <a class="list-group-item" href="#">
+      <div class="media">
+          <div class="media-left">
+              <img src="http://lorempixel.com/100/100/abstract?3" class="img-rounded" alt="">
+          </div>
+          <div class="media-body">
+              <h4 class="list-group-item-header">FL Women <span class="badge pull-right">7 requests</span></h4>
+              <p class="list-group-item-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</p>
+          </div>
+      </div>
+  </a>
 </div>
