--- a/app/templates/ListRequests.html
+++ b/app/templates/ListRequests.html
@@ -2,84 +2,96 @@
   <a class="list-group-item">
       <div class="media">
           <div class="media-left">
-              <span class="fa-stack fa-lg">
+              <span class="fa-stack fa-2x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-circle fa-stack-1x"></i>
               </span>
           </div>
           <div class="media-body">
-              <img src="http://lorempixel.com/50/50/people" class="pull-right img-circle" alt="">
               <p class="list-group-item-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
+          </div>
+          <div class="media-right">
+            <img src="http://i.pravatar.cc/60?u=user1" class="img-circle" alt="">
           </div>
       </div>
   </a>
   <a class="list-group-item disabled">
       <div class="media">
           <div class="media-left">
-              <span class="fa-stack fa-lg">
+              <span class="fa-stack fa-2x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-check fa-stack-1x fa-inverse"></i>
               </span>
           </div>
           <div class="media-body">
-              <img src="http://lorempixel.com/50/50/people" class="pull-right img-circle" alt="">
               <p class="list-group-item-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
+          </div>
+          <div class="media-right">
+            <img src="http://i.pravatar.cc/60?u=user2" class="img-circle" alt="">
           </div>
       </div>
   </a>
   <a class="list-group-item">
       <div class="media">
           <div class="media-left">
-              <span class="fa-stack fa-lg">
+              <span class="fa-stack fa-2x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-circle fa-stack-1x"></i>
               </span>
           </div>
           <div class="media-body">
-              <img src="http://lorempixel.com/50/50/people" class="pull-right img-circle" alt="">
               <p class="list-group-item-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
+          </div>
+          <div class="media-right">
+            <img src="http://i.pravatar.cc/60?u=user3" class="img-circle" alt="">
           </div>
       </div>
   </a>
   <a class="list-group-item disabled">
       <div class="media">
           <div class="media-left">
-              <span class="fa-stack fa-lg">
+              <span class="fa-stack fa-2x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-check fa-stack-1x fa-inverse"></i>
               </span>
           </div>
           <div class="media-body">
-              <img src="http://lorempixel.com/50/50/people" class="pull-right img-circle" alt="">
               <p class="list-group-item-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
+          </div>
+          <div class="media-right">
+            <img src="http://i.pravatar.cc/60?u=user4" class="img-circle" alt="">
           </div>
       </div>
   </a>
   <a class="list-group-item">
       <div class="media">
           <div class="media-left">
-              <span class="fa-stack fa-lg">
+              <span class="fa-stack fa-2x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-circle fa-stack-1x"></i>
               </span>
           </div>
           <div class="media-body">
-              <img src="http://lorempixel.com/50/50/people" class="pull-right img-circle" alt="">
               <p class="list-group-item-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
+          </div>
+          <div class="media-right">
+            <img src="http://i.pravatar.cc/60?u=user5" class="img-circle" alt="">
           </div>
       </div>
   </a>
   <a class="list-group-item">
       <div class="media">
           <div class="media-left">
-              <span class="fa-stack fa-lg">
+              <span class="fa-stack fa-2x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-circle fa-stack-1x"></i>
               </span>
           </div>
           <div class="media-body">
-              <img src="http://lorempixel.com/50/50/people" class="pull-right img-circle" alt="">
               <p class="list-group-item-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
+          </div>
+          <div class="media-right">
+            <img src="http://i.pravatar.cc/60?u=user6" class="img-circle" alt="">
           </div>
       </div>
   </a>
