--- a/app/templates/NavBar.html
+++ b/app/templates/NavBar.html
@@ -20,7 +20,7 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="#settings">
           <span class="menu-icon fa fa-cog"></span>
           Settings
         </a>
@@ -28,4 +28,3 @@
     </ul>
   </div>
 </nav>
-
