Add missing tags

--- a/app/templates/ListRequests.html
+++ b/app/templates/ListRequests.html
@@ -1,5 +1,5 @@
 <div class="list-group">
-  <a class="list-group-item">
+  <a class="list-group-item" href="#">
       <div class="media">
           <div class="media-left">
               <span class="fa-stack fa-2x">
@@ -15,7 +15,7 @@
           </div>
       </div>
   </a>
-  <a class="list-group-item disabled">
+  <a class="list-group-item disabled" href="#">
       <div class="media">
           <div class="media-left">
               <span class="fa-stack fa-2x">
@@ -31,7 +31,7 @@
           </div>
       </div>
   </a>
-  <a class="list-group-item">
+  <a class="list-group-item" href="#">
       <div class="media">
           <div class="media-left">
               <span class="fa-stack fa-2x">
@@ -47,7 +47,7 @@
           </div>
       </div>
   </a>
-  <a class="list-group-item disabled">
+  <a class="list-group-item disabled" href="#">
       <div class="media">
           <div class="media-left">
               <span class="fa-stack fa-2x">
@@ -63,7 +63,7 @@
           </div>
       </div>
   </a>
-  <a class="list-group-item">
+  <a class="list-group-item" href="#">
       <div class="media">
           <div class="media-left">
               <span class="fa-stack fa-2x">
@@ -79,7 +79,7 @@
           </div>
       </div>
   </a>
-  <a class="list-group-item">
+  <a class="list-group-item" href=#>
       <div class="media">
           <div class="media-left">
               <span class="fa-stack fa-2x">
