Clean up placeholder images

--- a/app/templates/ListGroups.html
+++ b/app/templates/ListGroups.html
@@ -5,7 +5,7 @@
               <img src="http://lorempixel.com/100/100/abstract?1" class="img-rounded" alt="">
           </div>
           <div class="media-body">
-              <h4 class="list-group-item-header">FL Men <span class="badge pull-right">12 requests</span></h4>
+              <h4 class="list-group-item-header">FL Men <span class="badge pull-right">12 members</span></h4>
               <p class="list-group-item-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</p>
           </div>
       </div>
@@ -16,7 +16,7 @@
               <img src="http://lorempixel.com/100/100/abstract?2" class="img-rounded" alt="">
           </div>
           <div class="media-body">
-              <h4 class="list-group-item-header">WCC Youth <span class="badge pull-right">21 requests</span></h4>
+              <h4 class="list-group-item-header">WCC Youth <span class="badge pull-right">21 members</span></h4>
               <p class="list-group-item-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</p>
           </div>
       </div>
@@ -27,7 +27,7 @@
               <img src="http://lorempixel.com/100/100/abstract?3" class="img-rounded" alt="">
           </div>
           <div class="media-body">
-              <h4 class="list-group-item-header">FL Women <span class="badge pull-right">7 requests</span></h4>
+              <h4 class="list-group-item-header">FL Women <span class="badge pull-right">7 members</span></h4>
               <p class="list-group-item-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</p>
           </div>
       </div>
