added share floating button

--- a/app/templates/ListRequests.html
+++ b/app/templates/ListRequests.html
@@ -95,4 +95,7 @@
           </div>
       </div>
   </a>
+    <nav class="container-float-btn"> 
+      <a href="#" class="buttons-float" tooltip="Share Requests"></a>
+    </nav>
 </div>
