--- a/app/templates/ListRequests.html
+++ b/app/templates/ListRequests.html
@@ -96,6 +96,6 @@
       </div>
   </a>
     <nav class="container-float-btn"> 
-      <a href="#/createrequest" class="buttons-float" tooltip="Share Requests"></a>
+      <a href="#/request" class="buttons-float" tooltip="Share Requests"></a>
     </nav>
 </div>
